--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,7 @@ ul, li{
 
 html {
   scroll-behavior: smooth;
+  background-color: var(--navy);
 }
 
 a, a:hover, a:focus, a:active {
